docs/PTS_grammar.txt
program
  : block
  ;

block
  : ((expression | statement |function_declaration) SEMI )*
  ;

statement
  : declaration
  | assignment_statement
  | mostra_statement
  | retorna_statement
  ;

assignment_statement
  : IDENTIFIER EQUAL expression
  ;

retorna_statement
  : RETORNA expression
  ;

mostra_statement
  : MOSTRA expression
  ;

expression
  : term (add_operator term)*
  ;

term
  : factor (multi_operator term)*
  ;

factor
  : INTEGER
  | DECIMAL
  | LPAR expression RPAR
  | add_operator factor
  | IDENTIFIER (LPAR actual_parameters? RPAR)?
  ;

actual_parameters
  : IDENTIFIER (COMMA IDENTIFIER)*
  ;

mult_operator
  : STAR
  | SLASH
  | MODULO
  ;

add_operator
  : PLUS
  | MINUS
  ;

declaration
  : simple_declaration
  | array_declaration
  ;

simple_declaration
  : DECL type IDENTIFIER (EQUAL expression)?
  ;

array_declaration
  : VECTOR type IDENTIFIER LBRACKETS INTEGER RBRACKETS
  ;

type
  : IDENTIFIER
  ;

function_declaration
  : DEFINA IDENTIFIER LPAR formal_parameter_section? RPAR (DOUBLECOL type)? LBRACES function_block RBRACES
  ;

function_block
  : ((expression | statement)  SEMI )*

formal_parameter_section
  : type IDENTIFIER (COMMA type IDENTIFIER)*
  ;
